--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -26,13 +26,15 @@
 <ul>
   <li>Direct, <i>type-safe</i> access to:</li>
   <ul>
-    <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-graphql">GraphQL</a> schemas, queries, etc.</li>
+    <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-sql">SQL <b><i>(New!)</b></a></li>
+    <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-graphql">GraphQL</a></li>
     <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-json">JSON & JSON Schema</a>, <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-yaml">YAML</a>, <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-xml">XML</a>
     <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-csv">CSV</a></li>
     <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-js">JavaScript</a></li>
     <li>etc.</li>
   </ul>
   <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-ext">Extension Methods</a></li>
+  <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-delegation">Delegation</a></li>
   <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-props">Properties</a></li>
   <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-ext#operator-overloading">Operator Overloading</a></li>
   <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-ext#unit-expressions">Unit Expressions</a></li>
@@ -40,25 +42,23 @@
   <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-preprocessor">A Preprocessor</a></li>
   <li>...and more</li>
 </ul>
-<p>All fully supported in <strong>Java 8 - 17</strong> with comprehensive IDE support in <strong>IntelliJ IDEA</strong> and <strong>Android Studio</strong>.
+<p>All fully supported in <strong>Java 8 - 21</strong> + latest with comprehensive IDE support in <strong>IntelliJ IDEA</strong> and <strong>Android Studio</strong>.
 Manifold consists of a set of modules, one for each feature. Simply add the Manifold dependencies of your choosing to your existing project and begin taking advantage of them.</p>
 <blockquote>
-  <p><em><strong>New!</strong></em></p>
-  <strong>Properties for Java!</strong>
-  <pre><code class="java">
-    <b>public interface</b> Book {
-      <b>@var</b> String title; // automatically builds private field & accessors for you
-    }
-    // refer to it directly by name
-    book.title = &quot;Daisy&quot;;     // calls setter
-    String name = book.title; // calls getter
-    book.title += &quot; chain&quot;;   // calls getter & setter
-  </code></pre>
-  <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-props">Learn more</a>.
+  <p><h2><i>What's new...</i></h2></p>
+  <p><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-sql/readme.md"<i><h2>Type-safe SQL!</h2></i></a></p>
+  <p>Manifold SQL lets you write native SQL <i>directly</i> and <i>type-safely</i> in your Java code.<br>
+  <ul>
+    <li>Query types are instantly available as you type native SQL of any complexity in your Java code</li>
+    <li>Schema types are automatically derived from your database, providing type-safe CRUD, decoupled TX, and more</li>
+    <li>No ORM, No DSL, No wiring, and No code generation build steps</li>
+  </ul><br>
+  <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-sql/readme.md"><img width="80%" height="80%" align="top" src="https://github.com/manifold-systems/manifold/raw/master/docs/images/img_3.png"></a>.
 </blockquote>
 <h2><a href="#what-can-you-do-with-manifold" id="what-can-you-do-with-manifold">What can you do with Manifold?</a></h2>
 <h3><a href="#meta-programming" id="meta-programming"><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-core-parent/manifold">Meta-programming</a></a></h3>
 <p>Use the framework to gain direct, type-safe access to <em>any</em> type of resource, such as
+<a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-sql"><strong>SQL</strong></a>,
 <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-graphql"><strong>GraphQL</strong></a>,
 <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-json"><strong>JSON</strong></a>,
 <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-xml"><strong>XML</strong></a>,
@@ -66,6 +66,15 @@ Manifold consists of a set of modules, one for each feature. Simply add the Mani
 <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-csv"><strong>CSV</strong></a>, and even
 other languages such as <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-js"><strong>JavaScript</strong></a>.
 Remove the code gen step in your build process.</p>
+<p><strong>SQL:</strong> Use native SQL of any complexity directly and <em>type-safely</em> from your Java code.</p>
+<pre><code class="java">Language english =
+  &quot;[.sql/]select * from Language where name = 'English'&quot;.fetchOne();
+Film film = Film.builder(&quot;My Movie&quot;, english)
+  .withDescription(&quot;Nice movie&quot;)
+  .withReleaseYear(2023)
+  .build();
+MyDatabase.commit();
+</code></pre>
 <p><strong>GraphQL:</strong> Use types defined in .graphql files <em>directly</em>, no code gen steps! Make GraphQL changes and immediately use
 them with code completion.</p>
 <pre><code class="java">var query = MovieQuery.builder(Action).build();
@@ -92,6 +101,19 @@ User.request(&quot;http://api.example.com/users&quot;).postOne(user);
 </p>
 <pre><code class="java">String greeting = &quot;hello&quot;;
 greeting.myMethod(); // Add your own methods to String!
+</code></pre>
+<h3><a href="#delegation" id="delegation"><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-delegation">Delegation</a></a></h3>
+<p>Favor composition over inheritance. Use <code>@link</code> and <code>@part</code> for automatic interface implementation forwarding and <em>true</em> delegation.
+</p>
+<pre><code class="java">class MyClass implements MyInterface {
+  @link MyInterface myInterface; // transfers calls on MyInterface to myInterface
+
+  public MyClass(MyInterface myInterface) {
+    this.myInterface = myInterface; // dynamically configure behavior
+  }
+
+  // No need to implement MyInterface here, but you can override myInterface as needed
+}
 </code></pre>
 <h3><a href="#operator-overloading" id="operator-overloading"><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-ext#operator-overloading">Operator Overloading</a></a></h3>
 <p>Implement <em>operator</em> methods on any type to directly support arithmetic, relational, and unit operators.</p>
@@ -595,6 +617,9 @@ Other minor fixes and improvements.
                         serviceImplementation="manifold.ij.extensions.ManDefaultASTFactoryImpl" overrides="true"/>
     <applicationService serviceInterface="com.intellij.lang.PsiBuilderFactory"
                         serviceImplementation="manifold.ij.extensions.ManPsiBuilderFactoryImpl" overrides="true"/>
+
+    <applicationService serviceInterface="com.intellij.psi.util.JavaClassSupers"
+                        serviceImplementation="manifold.ij.extensions.ManJavaClassSupersImpl" overrides="true"/>
 
     <!--<library.type implementation="manifold.ij.extensions.ManLibraryType"/>-->
 
