--- a/src/main/resources/messages/Manifold.properties
+++ b/src/main/resources/messages/Manifold.properties
@@ -24,7 +24,7 @@ error.file.template=Unable to process file template {0}
 type.Class=Class
 type.Class.Name=Name
 new.ext.method.class.menu.action.text=Extension Class
-new.ext.method.class.menu.action.description=Create new Extension Class
+new.ext.method.class.menu.action.description=Create new Extension class
 new.ext.method.class.dlg.InvalidType=This is not a valid Java qualified name
 error.new.class.dlg.title=Cannot Create Class
 new.ext.method.class.progress.text=Creating Extension class {0}.{1}
