--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ dependencies {
   implementation group: 'systems.manifold', name: 'manifold-image', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-props', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-params-rt', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-delegation', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-strings', version: manifoldVersion
   implementation group: 'systems.manifold', name: 'manifold-exceptions', version: manifoldVersion
