Use latest manifold - support method ref support for extension methods and structural methods

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,9 @@
 #
 #
 
-version=2025.1.1
-manifoldVersion=2024.1.54-SNAPSHOT
+version=2025.1.2
+manifoldVersion=2025.1.0-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=251-EAP-SNAPSHOT
+#defaultIjVersion=IC-251.18673.35
+defaultIjVersion=251.17181-EAP-CANDIDATE-SNAPSHOT
+#defaultIjVersion=251-EAP-SNAPSHOT
