--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,6 @@
 #
 
 version=2024.1.22
-manifoldVersion=2025.1.0-SNAPSHOT
+manifoldVersion=2025.1.0
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=243-EAP-SNAPSHOT
