https://github.com/manifold-systems/manifold/issues/708 - support user-defined android build directory, for build variants support

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -714,7 +714,7 @@ Other minor fixes and improvements.
     <iconProvider implementation="manifold.ij.extensions.PropertiesIconProvider"/>
     <psi.treeChangeListener implementation="manifold.ij.extensions.GraphQlConfigTreeChangeListener"/>
 
-    <applicationConfigurable instance="manifold.ij.extensions.ManConfigurable"/>
+    <projectConfigurable instance="manifold.ij.extensions.ManConfigurable" displayName="Manifold Settings"/>
 
     <colorSettingsPage implementation="manifold.ij.extensions.ManColorSettingsPage"/>
 
