--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -715,7 +715,7 @@ Other minor fixes and improvements.
     <highlightVisitor implementation="manifold.ij.extensions.ManHighlightVisitor"/>
     <psi.treeChangeListener implementation="manifold.ij.extensions.GraphQlConfigTreeChangeListener"/>
 
-    <applicationConfigurable instance="manifold.ij.extensions.ManConfigurable"/>
+    <projectConfigurable instance="manifold.ij.extensions.ManConfigurable" displayName="Manifold Settings"/>
 
     <colorSettingsPage implementation="manifold.ij.extensions.ManColorSettingsPage"/>
 
