--- a/gradle.properties
+++ b/gradle.properties
@@ -17,9 +17,10 @@
 #
 #
 
-version=2025.1.19
-manifoldVersion=2025.1.25-SNAPSHOT
+version=2025.1.20
+manifoldVersion=2025.1.27-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 #defaultIjVersion=IC-251.18673.35
 #defaultIjVersion=251.17181-EAP-CANDIDATE-SNAPSHOT
-defaultIjVersion=251-EAP-SNAPSHOT
+#defaultIjVersion=253.17525-EAP-CANDIDATE-SNAPSHOT
+defaultIjVersion=252-EAP-SNAPSHOT
